--- a/x-poc4-coderabbit/0.1-Planning/0.1.4e-architecture-exit-codes.md
+++ b/x-poc4-coderabbit/0.1-Planning/0.1.4e-architecture-exit-codes.md
@@ -1,9 +1,30 @@
 coderabbit-json
 echo $?
 
-# Exit codes:
-# 0 = Success, no critical issues
-# 1 = Critical issues found or error occurred
+# Exit codes (Unix-aligned scheme):
+# 0   = Success - All checks passed, no issues found
+#       CI/Automation: Proceed with deployment/merge
+#
+# 1   = Issues Found - Code review identified problems (P0/P1/P2)
+#       CI/Automation: Requires code fixes; fail build but allow retry after remediation
+#
+# 2   = CLI Usage Error - Invalid arguments, unknown options, or incorrect command syntax
+#       CI/Automation: Fix CI script/command invocation; not a code problem
+#
+# 3   = Configuration Error - Missing environment variables, invalid config files, or auth failure
+#       CI/Automation: Fix environment setup (secrets, config, tokens); not a code problem
+#
+# 4   = Unrecoverable System Error - Out of memory, disk full, I/O failure, or system resource exhaustion
+#       CI/Automation: Investigate infrastructure; retry may succeed after resource cleanup
+#
+# 127 = Command Not Found - 'coderabbit' executable not in PATH or not installed
+#       CI/Automation: Install CodeRabbit CLI or fix PATH; environment setup issue
+#
+# 128+ = Terminated by Signal - Process killed by signal (e.g., 130 = SIGINT/Ctrl+C, 137 = SIGKILL, 143 = SIGTERM)
+#       CI/Automation: Timeout, manual interrupt, or forced termination; investigate timeout settings
+#
+# Purpose: Differentiate between code issues (exit 1, requires developer action) and environment/config
+# issues (exits 2/3/4/127, requires DevOps/CI action). This allows automation to route failures correctly.
 ```
 
 ---
