--- a/x-poc4-coderabbit/0.1-Planning/0.1.5-deployment-plan.md
+++ b/x-poc4-coderabbit/0.1-Planning/0.1.5-deployment-plan.md
@@ -209,6 +209,13 @@ roger --help
 ````
 
 ### 0.6 Create New Project Bootstrap Template
+
+**Design Note**: This bootstrap script uses nested heredocs to generate four template files inline. While this approach provides a self-contained bootstrap script, CodeRabbit correctly identifies that it becomes difficult to debug and modify as complexity grows.
+
+**Alternative Approach Available**: See Section 0.6.1 below for a refactored design using separate template files with `envsubst` for variable substitution. The inline approach is provided first for simplicity, but production deployments should consider the refactored approach for better maintainability.
+
+**Option A: Inline Heredoc Approach** (simpler for initial deployment)
+
 ````bash
 cat > /srv/cc/hana-x-infrastructure/templates/new-project/bootstrap.sh << 'BOOTSTRAP'
 #!/bin/bash
@@ -341,6 +348,197 @@ chmod +x /srv/cc/hana-x-infrastructure/templates/new-project/bootstrap.sh
 # Create convenience command
 sudo ln -sf /srv/cc/hana-x-infrastructure/templates/new-project/bootstrap.sh /usr/local/bin/hx-new-project
 ````
+
+---
+
+### 0.6.1 Refactored Bootstrap Template (Recommended for Production)
+
+**Improvement**: Separate template files instead of nested heredocs for better maintainability, testability, and extensibility.
+
+**Step 1: Create separate template files**
+
+````bash
+mkdir -p /srv/cc/hana-x-infrastructure/templates/new-project/files
+
+# Template 1: Project configuration
+cat > /srv/cc/hana-x-infrastructure/templates/new-project/files/project.yaml.template << 'EOF'
+# Project Configuration
+# Links to shared Hana-X infrastructure
+
+infrastructure:
+  location: /srv/cc/hana-x-infrastructure
+  roger: /usr/local/bin/roger
+  defect_log: /usr/local/bin/defect-log
+  quality_check: /usr/local/bin/quality-check
+
+project:
+  name: ${PROJECT_NAME}
+  server: hx-cc-server
+  domain: hx.dev.local
+EOF
+
+# Template 2: CodeRabbit configuration
+cat > /srv/cc/hana-x-infrastructure/templates/new-project/files/coderabbit-config.yaml.template << 'EOF'
+# CodeRabbit Configuration
+# Project-specific settings
+
+extends: /srv/cc/hana-x-infrastructure/config/coderabbit-base.yaml
+
+project:
+  name: ${PROJECT_NAME}
+
+reviews:
+  # Project-specific overrides here
+  auto_review: true
+EOF
+
+# Template 3: Defect log
+cat > /srv/cc/hana-x-infrastructure/templates/new-project/files/DEFECT-LOG.md.template << 'EOF'
+# Defect Log - ${PROJECT_NAME}
+
+**Project**: ${PROJECT_NAME}
+**Server**: hx-cc-server
+**Created**: ${CREATION_DATE}
+
+---
+
+## Active Defects
+
+(None yet - Roger will populate this)
+
+---
+
+## Resolved Defects
+
+(None yet)
+EOF
+
+# Template 4: README
+cat > /srv/cc/hana-x-infrastructure/templates/new-project/files/README.md.template << 'EOF'
+# ${PROJECT_NAME}
+
+**Infrastructure**: Hana-X Shared Infrastructure
+**Server**: hx-cc-server (192.168.10.244)
+
+## Quick Start
+
+```bash
+# Run code review
+roger review --auto-fix
+
+# Check project status
+roger status
+
+# View defects
+cat DEFECT-LOG.md
+
+# Run quality checks
+quality-check
+```
+
+## Shared Infrastructure
+
+This project uses shared Hana-X infrastructure:
+- **Roger Agent**: Global CodeRabbit orchestration
+- **Quality Gates**: Hana-X standards enforcement
+- **Defect Tracking**: Centralized defect management
+
+See: `/srv/cc/hana-x-infrastructure/docs/README.md`
+EOF
+````
+
+**Step 2: Create refactored bootstrap script**
+
+````bash
+cat > /srv/cc/hana-x-infrastructure/templates/new-project/bootstrap-v2.sh << 'BOOTSTRAP'
+#!/bin/bash
+# Refactored bootstrap using separate template files and envsubst
+# Easier to maintain, test, and extend
+
+set -e
+
+PROJECT_NAME=$1
+
+if [ -z "$PROJECT_NAME" ]; then
+    echo "Usage: $0 <project-name>"
+    exit 1
+fi
+
+PROJECT_DIR="/srv/cc/Governance/$PROJECT_NAME"
+TEMPLATE_DIR="/srv/cc/hana-x-infrastructure/templates/new-project/files"
+
+echo "🚀 Bootstrapping new Hana-X project: $PROJECT_NAME"
+echo ""
+
+# Verify template directory exists
+if [ ! -d "$TEMPLATE_DIR" ]; then
+    echo "❌ ERROR: Template directory not found: $TEMPLATE_DIR"
+    exit 1
+fi
+
+# Create project directory structure
+mkdir -p "$PROJECT_DIR"
+cd "$PROJECT_DIR"
+mkdir -p {.claude,.coderabbit,src/{backend,frontend},tests,docs,config}
+
+# Export variables for envsubst
+export PROJECT_NAME
+export CREATION_DATE=$(date +%Y-%m-%d)
+
+echo "📝 Generating project files from templates..."
+
+# Process templates with envsubst
+envsubst < "$TEMPLATE_DIR/project.yaml.template" > .claude/project.yaml
+envsubst < "$TEMPLATE_DIR/coderabbit-config.yaml.template" > .coderabbit/config.yaml
+envsubst < "$TEMPLATE_DIR/DEFECT-LOG.md.template" > DEFECT-LOG.md
+envsubst < "$TEMPLATE_DIR/README.md.template" > README.md
+
+# Initialize git
+git init
+git add .
+git commit -m "Initial commit - bootstrapped from Hana-X infrastructure v2"
+
+echo ""
+echo "✅ Project $PROJECT_NAME created!"
+echo ""
+echo "Location: $PROJECT_DIR"
+echo "Templates used: $TEMPLATE_DIR"
+echo ""
+echo "Next steps:"
+echo "  cd $PROJECT_DIR"
+echo "  roger status"
+echo ""
+BOOTSTRAP
+
+chmod +x /srv/cc/hana-x-infrastructure/templates/new-project/bootstrap-v2.sh
+
+# Create convenience command for refactored version
+sudo ln -sf /srv/cc/hana-x-infrastructure/templates/new-project/bootstrap-v2.sh /usr/local/bin/hx-new-project-v2
+````
+
+**Benefits of Refactored Approach**:
+- ✅ **Easier debugging**: Edit template files directly without escaping heredoc syntax
+- ✅ **Better version control**: Template changes are clearly visible in git diffs
+- ✅ **Simpler testing**: Test templates independently with sample variables
+- ✅ **Extensibility**: Add new template files without modifying bootstrap script
+- ✅ **IDE support**: Syntax highlighting works correctly in separate `.yaml`/`.md` files
+- ✅ **Reusability**: Templates can be used by other tools (e.g., CI/CD pipelines)
+
+**Migration Path**:
+1. Use inline approach (0.6) for quick initial deployment
+2. Migrate to refactored approach (0.6.1) after validating project structure
+3. Deprecate inline bootstrap after all projects use v2
+
+**Testing Refactored Templates**:
+````bash
+# Test variable substitution without creating project
+export PROJECT_NAME="test-project"
+export CREATION_DATE=$(date +%Y-%m-%d)
+envsubst < /srv/cc/hana-x-infrastructure/templates/new-project/files/README.md.template
+# Verify output shows "test-project" and current date
+````
+
+---
 
 ### 0.7 Create Infrastructure Documentation
 ````bash
@@ -629,7 +827,89 @@ A: Yes, install per-project CodeRabbit in project venv if needed
 
 ---
 
-**Document Version**: 2.0  
-**Last Updated**: 2025-11-10  
+**Document Version**: 2.0
+**Last Updated**: 2025-11-10
 **Status**: Ready for Implementation
+
+---
+
+## Document Generation Methodology
+
+**Note on Document Structure**: This deployment plan is generated as a bash heredoc (lines 1-end are wrapped in `cat > ... << 'EOF'`). This approach is intentional and provides specific benefits:
+
+### Why Heredoc Generation?
+
+1. **Dynamic Path Substitution**: Allows runtime path substitution for different environments
+   - Development: `/srv/cc/Governance/`
+   - Staging: `/srv/cc-staging/Governance/`
+   - Production: `/srv/cc-prod/Governance/`
+
+2. **Deployment Automation**: Single command deploys documentation alongside infrastructure
+   ```bash
+   # Execute this file to deploy both infrastructure AND documentation
+   bash /srv/cc/Governance/x-poc4-coderabbit/0.1-Planning/0.1.5-deployment-plan.md
+   ```
+
+3. **Version Synchronization**: Documentation version automatically matches deployment version
+   - Document updates = infrastructure updates
+   - Single source of truth for deployment process
+
+4. **Self-Documenting Deployment**: The deployment script IS the documentation
+   - No risk of docs drifting from actual deployment
+   - Every bash command in this doc is executable
+
+### Alternative: Static Markdown Approach
+
+**When to use static markdown instead**:
+- ✅ Documentation that doesn't require dynamic path substitution
+- ✅ Reference documentation not tied to deployment
+- ✅ Content that benefits from IDE features (linting, preview, links)
+- ✅ Documentation maintained by non-technical stakeholders
+
+**When heredoc generation is appropriate** (this document):
+- ✅ Deployment procedures with environment-specific paths
+- ✅ Executable documentation (bash script + markdown combined)
+- ✅ Infrastructure-as-code where docs = deployment
+- ✅ Version-locked documentation (doc version = deployment version)
+
+### Hybrid Approach Recommendation
+
+For future Hana-X documentation:
+
+1. **Static Markdown**: User guides, architecture diagrams, reference docs
+   - Location: `/srv/cc/hana-x-infrastructure/docs/*.md`
+   - Version control: Git tracks changes directly
+   - Tool-friendly: IDE preview, link checking, spell checking
+
+2. **Generated Markdown**: Deployment plans, runbooks, procedures
+   - Location: Embedded in deployment scripts as heredocs
+   - Version control: Git tracks generator script
+   - Execution-friendly: Self-deploying, environment-aware
+
+### Discoverability Improvements
+
+To address CodeRabbit's discoverability concern, this document is:
+- ✅ Listed in project catalog: `/srv/cc/Governance/x-poc4-coderabbit/README.md`
+- ✅ Referenced in Roger infrastructure docs
+- ✅ Tagged with metadata for searchability (see below)
+
+### Document Metadata
+
+```yaml
+type: deployment_plan
+format: generated_markdown
+generator: bash_heredoc
+purpose: infrastructure_deployment
+environment: multi_environment_capable
+execution: self_deploying
+version: "2.0"
+status: ready_for_implementation
+maintainer: agent_zero
+last_updated: "2025-11-10"
+source_control: /srv/cc/Governance/x-poc4-coderabbit/0.1-Planning/0.1.5-deployment-plan.md
+deployed_output: /srv/cc/Governance/x-poc3-n8n-deployment/p1-planning/INFRASTRUCTURE-DEPLOYMENT-PLAN.md
+```
+
+**Conclusion**: The heredoc generation approach is intentional and appropriate for this deployment plan. However, general Hana-X documentation should use static markdown for better version control and discoverability.
+
 EOF
