--- a/x-poc4-coderabbit/0.1-Planning/0.1.6-architecture-analysis.md
+++ b/x-poc4-coderabbit/0.1-Planning/0.1.6-architecture-analysis.md
@@ -60,7 +60,7 @@ Both capabilities share:
 
 ### CodeRabbit CLI Installation ✅
 
-**Verification Source**: `/srv/cc/Governance/x-poc4-coderabbit/0.0-Reasearch/coderabbit-cli.md`
+**Verification Source**: `/srv/cc/Governance/x-poc4-coderabbit/0.0-Research/coderabbit-cli.md`
 
 **Installation Command**:
 ```bash
@@ -69,7 +69,7 @@ curl -fsSL https://cli.coderabbit.ai/install.sh | sh
 
 **Status**: ✅ **VERIFIED** - Installation script available and tested
 
-**API Key**: ✅ **AVAILABLE** in `0.0-Reasearch/api-key.md`
+**API Key**: ✅ **AVAILABLE** in `0.0-Research/api-key.md`
 ```bash
 export CODERABBIT_API_KEY="cr-fe13e8590657e79c8ba231c3591afcd97b61e4395e79b0adf34aa1eb7c"
 ```
@@ -797,7 +797,7 @@ coderabbit-json --webhook https://slack.com/...  # Notify team
 1. **✅ PROCEED with Phase 0 + Phase 1** (1 day total)
 2. **✅ CodeRabbit CLI availability VERIFIED** (installation: `curl -fsSL https://cli.coderabbit.ai/install.sh | sh`)
 3. **✅ Documentation COMPLETE** (FORMATTED versions of 0.1.4d, 0.1.4e, 0.1.7 created)
-4. **✅ API Key AVAILABLE** (key stored in `0.0-Reasearch/api-key.md`)
+4. **✅ API Key AVAILABLE** (key stored in `0.0-Research/api-key.md`)
 5. **📋 TEST parser with sample output** (before deployment)
 6. **📊 MEASURE Phase 1 value** (before committing to Phase 2)
 
@@ -806,8 +806,8 @@ coderabbit-json --webhook https://slack.com/...  # Notify team
 ## Next Steps
 
 1. **✅ COMPLETED** (Documentation Phase):
-   - ✅ CodeRabbit CLI installation command verified (`0.0-Reasearch/coderabbit-cli.md`)
-   - ✅ API key located and available (`0.0-Reasearch/api-key.md`)
+   - ✅ CodeRabbit CLI installation command verified (`0.0-Research/coderabbit-cli.md`)
+   - ✅ API key located and available (`0.0-Research/api-key.md`)
    - ✅ Documentation files completed (FORMATTED versions created)
    - ✅ Architecture analysis comprehensive (this document)
 
