--- a/x-poc4-coderabbit/0.1-Planning/0.1.7-worflow-guide.md
+++ b/x-poc4-coderabbit/0.1-Planning/0.1.7-worflow-guide.md
@@ -183,19 +183,35 @@ Review → Find Issues → Fix → Re-Review → Still Issues? → Fix Again
 
 ### Do This ✅
 ```
+Development Workflow:
 1. Let Claude implement the feature first
 2. Run CodeRabbit after implementation
 3. Let Claude fix the issues automatically
 4. Review the fixes Claude made
 5. Push when clean
+
+CI/CD Integration:
+6. Run CodeRabbit on PR creation (not every commit)
+7. Allow developers to run CodeRabbit locally before pushing
+8. Gate CodeRabbit to periodic checks or merge-time validation
+9. Use non-blocking mode for initial adoption (warn vs. fail)
+10. Cache CodeRabbit results to avoid redundant scans
 ```
 
 ### Not This ❌
 ```
+Development Anti-Patterns:
 1. Don't run CodeRabbit while writing code
 2. Don't manually fix CodeRabbit findings (let Claude do it)
 3. Don't skip the review step
 4. Don't push with P0/P1 issues unfixed
+
+CI/CD Anti-Patterns:
+5. Don't run CodeRabbit on every commit in CI (performance/cost impact)
+6. Don't block all CI pipelines on CodeRabbit by default (slows feedback loop)
+7. Don't run CodeRabbit multiple times for same code (cache results)
+8. Don't fail builds for P2 issues during initial rollout (too disruptive)
+9. Don't skip local validation before pushing (catches issues earlier)
 ```
 
 ---
